--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,9 @@
-apply plugin: 'com.android.application'
+if (isApp()) {
+    apply plugin: 'com.android.application'
+} else {
+    apply plugin: 'com.android.library'
+}
+
 
 apply plugin: 'kotlin-android'
 
@@ -8,7 +13,9 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "me.juhezi.mediademo"
+        if (isApp()) {
+            applicationId "me.juhezi.mediademo"
+        }
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -25,15 +32,39 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            if (isApp()) {
+                manifest.srcFile 'src/main/app/AndroidManifest.xml'
+            } else {
+                manifest.srcFile 'src/main/lib/AndroidManifest.xml'
+            }
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+}
+
+/**
+ * 判断是否为 APP
+ */
+def isApp() {
+    return rootProject.name != 'Media' && project.hasProperty("isApp") && isApp.toBoolean()
+}
+
+task printAppType {
+    if (isApp()) {
+        println "App"
+    } else {
+        println "Lib"
+    }
 }
