--- a/app/src/main/lib/AndroidManifest.xml
+++ b/app/src/main/lib/AndroidManifest.xml
@@ -6,7 +6,24 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application>
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name="me.juhezi.mediademo.MainActivity"
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="demo"
+                    android:path="/main"
+                    android:scheme="media" />
+
+            </intent-filter>
+
+        </activity>
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".CaptureActivity" />
     </application>
