[Add] Litho Demo

--- a/app/src/main/app/AndroidManifest.xml
+++ b/app/src/main/app/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".CaptureActivity" />
+
+        <activity android:name=".LithoActivity" />
     </application>
 
 </manifest>
