--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,14 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.2.0'
+    implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4"
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
 
     // (Java only)
     implementation "androidx.work:work-runtime:$work_version"
@@ -71,6 +71,14 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     // optional - Test helpers
     androidTestImplementation "androidx.work:work-testing:$work_version"
+
+    implementation 'com.facebook.litho:litho-core:0.35.0'
+    implementation 'com.facebook.litho:litho-widget:0.35.0'
+    annotationProcessor 'com.facebook.litho:litho-processor:0.35.0'
+    // SoLoader
+    implementation 'com.facebook.soloader:soloader:0.8.2'
+    // For integration with Fresco
+    implementation 'com.facebook.litho:litho-fresco:0.35.0'
 }
 
 /**
