--- a/app/src/main/app/AndroidManifest.xml
+++ b/app/src/main/app/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".ComposeDemoActivity"
+            android:label="@string/title_activity_compose_demo"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +26,6 @@
         </activity>
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".CaptureActivity" />
-
         <activity android:name=".LithoActivity" />
     </application>
 
