--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
 dependencies {
 
     def work_version = "2.3.4"
+    def camerax_version = "1.0.0-beta07"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -79,6 +80,15 @@ dependencies {
     implementation 'com.facebook.soloader:soloader:0.8.2'
     // For integration with Fresco
     implementation 'com.facebook.litho:litho-fresco:0.35.0'
+
+    // CameraX
+    // CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    // CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha14"
+    // CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha14"
 }
 
 /**
