--- a/app/src/main/lib/AndroidManifest.xml
+++ b/app/src/main/lib/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         </activity>
         <activity android:name=".VideoPlayerActivity" />
-        <activity android:name=".CaptureActivity" />
+        <activity android:name=".media.camera.CaptureActivity" />
     </application>
 
 </manifest>
