--- a/app/src/main/app/AndroidManifest.xml
+++ b/app/src/main/app/AndroidManifest.xml
@@ -16,6 +16,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <provider
+            android:name=".HelloSliceProvider"
+            android:authorities="me.juhezi.mediademo"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.app.slice.category.SLICE" />
+
+                <data
+                    android:host="juhezi.com"
+                    android:pathPrefix="/hello"
+                    android:scheme="http" />
+
+            </intent-filter>
+        </provider>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +43,6 @@
         </activity>
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".media.camera.CaptureActivity" />
-
         <activity android:name=".LithoActivity" />
     </application>
 
