--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
     implementation "androidx.camera:camera-extensions:1.0.0-alpha14"
     // CameraX View class
     implementation "androidx.camera:camera-view:1.0.0-alpha14"
+    implementation "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"
+    implementation 'com.google.android.material:material:1.2.1'
 }
 
 /**
