--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,9 @@ if (isApp()) {
 
 
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdkVersion 29
@@ -94,6 +95,11 @@ dependencies {
     implementation "androidx.camera:camera-view:1.0.0-alpha14"
     implementation "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"
     implementation 'com.google.android.material:material:1.2.1'
+
+    // AutoValue
+    implementation Libs.autoValue
+    kapt AnnotationProcessors.autoValue
+
 }
 
 /**
