--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
 
     implementation 'com.facebook.litho:litho-core:0.35.0'
     implementation 'com.facebook.litho:litho-widget:0.35.0'
-    annotationProcessor 'com.facebook.litho:litho-processor:0.35.0'
+    kapt 'com.facebook.litho:litho-processor:0.35.0'
     // SoLoader
     implementation 'com.facebook.soloader:soloader:0.8.2'
     // For integration with Fresco
@@ -100,6 +100,9 @@ dependencies {
     implementation Libs.autoValue
     kapt AnnotationProcessors.autoValue
 
+    Libs.rxLibs.forEach { implementation(it) }
+    Libs.lifeCycleLibs.forEach { implementation(it) }
+    Libs.retrofitLibs.forEach { implementation(it) }
 }
 
 /**
