--- a/app/src/main/app/AndroidManifest.xml
+++ b/app/src/main/app/AndroidManifest.xml
@@ -45,7 +45,9 @@
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".media.camera.CaptureActivity" />
         <activity android:name=".LithoActivity" />
-        <activity android:name=".broom.activity.V2EXActivity" />
+        <activity
+            android:name=".broom.activity.V2EXActivity"
+            android:theme="@style/AppTheme.MyApp" />
     </application>
 
 </manifest>
