--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ android {
 
     kotlinOptions {
         jvmTarget = "1.8"
+//        useIR = true
     }
 
 }
@@ -95,6 +96,8 @@ dependencies {
     implementation "androidx.camera:camera-view:1.0.0-alpha14"
     implementation "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"
     implementation 'com.google.android.material:material:1.2.1'
+    implementation("com.google.guava:guava:30.1-jre")
+    implementation("com.google.guava:guava:30.1-android")
 
     implementation Libs.glide
 
