--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     buildToolsVersion "29.0.3"
     defaultConfig {
@@ -19,7 +19,7 @@ android {
             applicationId "me.juhezi.mediademo"
         }
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -57,23 +57,22 @@ android {
 
 dependencies {
 
-    def work_version = "2.3.4"
-    def camerax_version = "1.0.0-beta07"
+    def work_version = "2.6.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.0"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.slice:slice-builders:1.0.0'
     implementation 'androidx.slice:slice-builders-ktx:1.0.0-alpha6'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4"
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.9'
 
     // (Java only)
     implementation "androidx.work:work-runtime:$work_version"
@@ -86,22 +85,23 @@ dependencies {
     implementation 'com.facebook.litho:litho-widget:0.35.0'
     kapt 'com.facebook.litho:litho-processor:0.35.0'
     // SoLoader
-    implementation 'com.facebook.soloader:soloader:0.8.2'
+    implementation 'com.facebook.soloader:soloader:0.9.0'
     // For integration with Fresco
     implementation 'com.facebook.litho:litho-fresco:0.35.0'
 
     // CameraX
     // CameraX core library using camera2 implementation
-    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-camera2:1.1.0-alpha09"
     // CameraX Lifecycle Library
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha14"
+    implementation "androidx.camera:camera-lifecycle:1.0.2"
+    implementation "androidx.camera:camera-extensions:1.0.0-alpha29"
     // CameraX View class
-    implementation "androidx.camera:camera-view:1.0.0-alpha14"
+    implementation "androidx.camera:camera-view:1.0.0-alpha29"
     implementation "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation("com.google.guava:guava:30.1-jre")
-    implementation("com.google.guava:guava:30.1-android")
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation "com.google.guava:guava:30.1-jre"
+    implementation "com.google.guava:guava:30.1-android"
+    implementation "androidx.core:core-splashscreen:1.0.0-alpha02"
 
     implementation Libs.glide
 
