--- a/slow-cut-base/build.gradle
+++ b/slow-cut-base/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -34,14 +34,15 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     Libs.rxLibs.forEach { api(it) }
     Libs.lifeCycleLibs.forEach { api(it) }
+    Libs.roomLibs.forEach { api(it) }
 }
