--- a/demo/src/main/app/AndroidManifest.xml
+++ b/demo/src/main/app/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:theme="@style/JetpackSplashTheme">
         <activity
             android:name=".letme.LetmeActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppTheme.MyApp" />
 
         <provider
             android:name=".HelloSliceProvider"
@@ -46,9 +47,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VideoPlayerActivity" />
-        <activity android:name=".media.camera.CaptureActivity" />
-        <activity android:name=".LithoActivity" />
+        <activity
+            android:name=".VideoPlayerActivity"
+            android:theme="@style/AppTheme.MyApp" />
+        <activity
+            android:name=".media.camera.CaptureActivity"
+            android:theme="@style/AppTheme.MyApp" />
+        <activity
+            android:name=".LithoActivity"
+            android:theme="@style/AppTheme.MyApp" />
         <activity
             android:name=".broom.activity.V2EXActivity"
             android:theme="@style/AppTheme.MyApp" />
