--- a/slow-cut-base/build.gradle
+++ b/slow-cut-base/build.gradle
@@ -9,8 +9,6 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -46,4 +44,5 @@ dependencies {
     Libs.lifeCycleLibs.forEach { api(it) }
     Libs.roomLibs.forEach { api(it) }
     Libs.pagingLibs.forEach { api(it) }
+    Libs.retrofitLibs.forEach { api(it) }
 }
