--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -60,7 +60,7 @@ dependencies {
 
     implementation project(":slow-cut-base")
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.31"
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
@@ -112,6 +112,9 @@ dependencies {
     Libs.rxLibs.forEach { implementation(it) }
     Libs.lifeCycleLibs.forEach { implementation(it) }
     Libs.retrofitLibs.forEach { implementation(it) }
+    Libs.arrowLibs.forEach {
+        implementation(it)
+    }
 }
 
 /**
