--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -102,6 +102,7 @@ dependencies {
     implementation "com.google.guava:guava:30.1-jre"
     implementation "com.google.guava:guava:30.1-android"
     implementation "androidx.core:core-splashscreen:1.0.0-alpha02"
+    implementation "com.huawei.hms:scan:1.3.2.300"
 
     implementation Libs.glide
 
