--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,14 @@ apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
 
-    buildToolsVersion "29.0.3"
     defaultConfig {
         if (isApp()) {
             applicationId "me.juhezi.mediademo"
         }
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -53,6 +52,9 @@ android {
         abortOnError false
     }
 
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -61,7 +63,6 @@ dependencies {
     def camerax_version = "1.0.0-beta07"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
