--- a/app/src/main/app/AndroidManifest.xml
+++ b/app/src/main/app/AndroidManifest.xml
@@ -35,7 +35,8 @@
             </intent-filter>
         </provider>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,9 +46,6 @@
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".media.camera.CaptureActivity" />
         <activity android:name=".LithoActivity" />
-        <activity
-            android:name=".broom.activity.V2EXActivity"
-            android:theme="@style/AppTheme.MyApp" />
     </application>
 
 </manifest>
