--- a/slow-cut/src/main/AndroidManifest.xml
+++ b/slow-cut/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MediaDemo">
-        <activity android:name=".CLActivity">
+        <activity android:name=".CLActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
