--- a/slow-cut-base/build.gradle
+++ b/slow-cut-base/build.gradle
@@ -13,6 +13,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // 将 proguard,pro 打包到 aar 中的设置
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -29,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    resourcePrefix "base_"
+
 }
 
 dependencies {
@@ -40,8 +44,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
     Libs.rxLibs.forEach { api(it) }
     Libs.lifeCycleLibs.forEach { api(it) }
+    api 'org.jooq:joor:0.9.6'
 }
