1. Update AGP version 2. Add [noxus] module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,12 @@ android {
 //        useIR = true
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     buildFeatures {
         viewBinding true
+    }
+    lint {
+        abortOnError false
     }
 }
 
